--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -17,6 +17,10 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
+
+				<label for="filtrar-tabela">Filtro:</label>
+				<input type="text" name="filtros" id="filtrar-tabela" placeholder="Digite o nome do Paciente">
+
 				<table>
 					<thead>
 						<tr>
@@ -101,5 +105,6 @@
 		<script src="js/calcula-imc.js"></script>
 		<script src="js/form.js"></script>
 		<script src="js/remover-paciente.js"></script>
+		<script src="js/filtra.js"></script>
 	</body>
 </html>
